<resources>
    <string name="app_name">Hourly</string>
    <string name="title_activity_test">TestActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Menu Items -->
    <string name="menu_item_recovery">Recovery Time</string>
    <string name="menu_item_theme_toggle">Toggle Theme</string>
    <string name="menu_item_clear_tasks">Clear Tasks</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Sleep Schedule Activity -->
    <string name="sleep_schedule">Sleep Schedule</string>
    <string name="bedtime">Bedtime:</string>
    <string name="hours_of_sleep">Hours of Sleep:</string>
    <string name="select">Select</string>
    <string name="set_sleep_schedule">Set Schedule</string>
    <string name="sleep_text">Sleep!</string>


    <!-- Shared Preference Keys -->
    <string name="bedtime_start_hour_key">Bedtime Start Hour Key</string>
    <string name="is_first_run_key">isFirstRun</string>
    <string name="marco_a_aguilar_hourly_shared_preference_key">Hourly Shared Preferences Key</string>


</resources>
