<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".SleepScheduleActivity">

            <include
                layout="@layout/toolbar_main"
                android:id="@+id/my_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textview_sleep_schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:text="@string/sleep_schedule"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="70dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/my_toolbar"/>

            <!-- Container for Bedtime row -->
            <LinearLayout
                android:id="@+id/bedtime_container"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/textview_sleep_schedule"
                android:weightSum="2"
                android:gravity="center">

                <TextView
                    android:id="@+id/textview_bedtime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:layout_marginEnd="20dp"
                    android:text="@string/bedtime"/>

                <!-- Needed to put my Button in a ViewGroup so that I could-->
                <!-- split the space shared by my TextView and Button down the middle-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_bedtime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_marginStart="10dp"
                        android:theme="@style/Theme.MaterialComponents"
                        app:backgroundTint="@color/colorAccent"
                        android:text="@string/select"/>
                </LinearLayout>
            </LinearLayout>


            <!-- Container for Hours of Sleep row -->
            <LinearLayout
                android:id="@+id/hours_of_sleep_container"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@id/bedtime_container"
                android:layout_marginTop="40dp"
                android:weightSum="2"
                android:gravity="center">

                <TextView
                    android:id="@+id/textview_hours_of_sleep"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:layout_marginEnd="20dp"
                    android:text="@string/hours_of_sleep"/>

                <!-- Needed to put my NumberPicker in a ViewGroup so that I could -->
                <!-- split the space shared by my TextView and Button down the middle -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <NumberPicker
                        android:id="@+id/number_picker_hours_of_sleep"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scrollbarSize="30dp"
                        android:layout_marginStart="10dp"
                        android:theme="@style/MyAppTheme.NumberPicker"
                        />

                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_set_sleep_schedule"
                android:layout_below="@id/hours_of_sleep_container"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:textColor="@color/white"
                android:theme="@style/Theme.MaterialComponents"
                app:backgroundTint="@color/colorAccent"
                android:text="@string/set_sleep_schedule"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>